# agenstin

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  slack_app.py
.claude/: settings.json
core/: claude_cli.py  incident.py  llm.py  mcp_client.py  mcp_prefetch.py  react.py  router.py
memory/: __init__.py  chunker.py  embedder.py  index.py  manager.py  store.py
tools/: base.py  browser_tool.py  claude_tool.py  file_tool.py  memory_tool.py  search_tool.py  shell_tool.py
